@@ -460,6 +460,9 @@ public:
   bool is_nil()    const;
   bool is_cons()   const;
   bool is_list()   const;
+  // Check for lists which don't contain tuple elements, so that they can be
+  // printed in standard list format.
+  bool is_listx()  const;
   bool is_voidx()  const;
   bool is_pair()   const;
   // This is always true, as we consider a singleton as a tuple, too. Use
@@ -467,6 +470,7 @@ public:
   bool is_tuple()  const { return true; }
   bool is_cons(expr &x, expr &y) const;
   bool is_list(exprl &xs) const;
+  bool is_listx(exprl &xs) const;
   bool is_pair(expr &x, expr &y) const;
   // Always true (see note above). Use is_pair() && istuple(xs) to test for a
   // "real" tuple instead.
